# gcc_recorder

./: .pre-commit-config.yaml  README.md  core.py  gc_conversion.py  pyproject.toml  user_interface.py
.github/workflows/: python-publish.yml
src/GCCRecorder/: __init__.py  core.py  gc_conversion.py  usb_stream_processer.py  usb_stream_reader.py  usb_stream_recorder.py  user_interface.py
